Bug 611639 - NS_ProxyRelease does not work for RefPtrs. r=shaver a=blocking